# ai-experiments

./: .gitignore  LICENSE  README.md
.devcontainer/: devcontainer.json
ecom-shopping-assistant/: README.md  app.py  conversation.py  image_processing.py  instructions.py  requirements.txt  shopping_team.py  utils.py
hrapp/: README.md  app.py  prompts.py  requirements.txt  scripts.py
learning-coach-thinktool/: README.md  env.example  pyproject.toml
learning-coach-thinktool/agents/: curriculum_agent.py  learning_curriculum_workflow.py  resource_agent.py
learning-coach-thinktool/streamlit_ui/: frontend.py
learning-coach-thinktool/utils/: llm.py
mcp/: Dockerfile  README.md  pyproject.toml
mcp-agent-experiment/: README.md  agent.py  app.py  dashboard_agent.py  env.example  main.py  pyproject.toml
mcp/src/mcp_sql_server/: ___main__.py  __init__.py  __main__.py  server.py
prompt_caching/: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
prompt_caching/agents/: eli5_agent.py
prompt_caching/cache/: prompt_cache.py
sqlchatbot/: .gitignore  README.md  requirements.txt  sqlchatbot.py
storybook_crewai/: Building AI Storybooks for My Son.mhtml  README.md  env.example  pyproject.toml  setup.py
storybook_crewai/backend/: __init__.py  main.py  models.py
storybook_crewai/backend/agents/: __init__.py  image_agent.py  story_writing_agent.py
storybook_crewai/backend/api/: api.py
storybook_crewai/backend/audio_generator/: elevenlabs_storyteller.py
storybook_crewai/backend/movie_generator/: movie_compiler.py
travel-agent/: README.md  app.py  conversation.py  instructions.py  requirements.txt  travel_itenary_workflow.py  utils.py
travel-agent/agno/: pyvenv.cfg
