[project]
name = "learning-coach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agno>=1.2.16",
    "anthropic>=0.49.0",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.0.0",
    "fpdf>=1.7.2",
    "groq>=0.22.0",
    "openai>=1.73.0",
    "pydantic>=2.11.3",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
]
