[project]
name = "mcp-agent-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agno",
    "anthropic>=0.49.0",
    "dotenv>=0.9.9",
    "groq>=0.20.0",
    "mcp>=1.6.0",
    "openai>=1.70.0",
    "streamlit>=1.44.0",
]
