[project]
name = "prompt-caching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.114.0",
    "dotenv>=0.9.9",
    "groq>=0.22.0",
    "langchain-groq>=0.3.2",
    "plotly>=6.0.1",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.44.1",
]
